# ICP-Talent-Pool

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
src/candid/: icp_ledger_init.did
src/icTalent_backend/: Cargo.toml
src/icTalent_backend/src/ic_talent_backend_canister/: Cargo.toml  ic_talent_backend.did
src/icTalent_backend/src/ic_talent_backend_canister/src/: api_query.rs  api_update.rs  lib.rs  state_handler.rs  types.rs
src/icTalent_backend/src/ic_talent_token_factory_canister/: Cargo.toml  ic_talent_token_factory.did
src/icTalent_backend/src/ic_talent_token_factory_canister/src/: api_query.rs  api_update.rs  lib.rs  state_handler.rs  token_pool.rs  types.rs
src/icTalent_frontend/: package.json  vite.config.js
src/icTalent_frontend/src/: ActorContext.js  App.jsx  index.css
src/icTalent_frontend/src/components/: Header.jsx  mode-toggle.jsx  theme-provider.jsx  theme-provider.tsx
src/icTalent_frontend/src/components/ui/: dialog.jsx  table.tsx  toaster.jsx  use-toast.jsx  visually-hidden.jsx
src/icTalent_frontend/src/pages/: Admin.jsx  Explore.jsx  Home.jsx  Profile.jsx  TalentProfile.jsx  Transactions.jsx
src/icTalent_frontend/src/utils/: icp.js
