[package]
name = "ic_talent_token_factory_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
serde = "1.0.200"
ic-stable-structures = "0.6.7"
icrc-ledger-types = "0.1.6"
hex = "0.4.3"

